force-app/main/default/objects/Event__c/fields/Organizer__c.field-meta.xml
<CustomField>
    <fullName>Organizer__c</fullName>
    <label>Organizer</label>
    <referenceTo>Event_Organizer__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>