force-app/main/default/objects/Event__c/validationRules/End_Date_must_be_ahead_Of_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_must_be_ahead_Of_Start_Date</fullName>
    <active>true</active>
    <description>End Date/Time must be at-least 1 day ahead of Start Date/Time ( If there is a value in End Date/Time field )</description>
    <errorConditionFormula>AND(NOT(ISNULL(End_Date_Time__c)), End_Date_Time__c -  Start_Date_Time__c  &lt;= 1)</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>End Date must be at-least 1 day ahead of Start Date</errorMessage>
</ValidationRule>