force-app/main/default/objects/Event__c/validationRules/Event_Type_field_value_is_InPerson.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Type_field_value_is_InPerson</fullName>
    <active>true</active>
    <description>If Event Type field value is In-Person then user must need to select Location on Event Record</description>
    <errorConditionFormula>AND(ISPICKVAL(Event_Type__c, &quot;In-Person&quot;), Location__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>Select Location</errorMessage>
</ValidationRule>