force-app/main/default/objects/Event__c/validationRules/Recurring_Checkbox_Checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Checkbox_Checked</fullName>
    <active>true</active>
    <description>If Recurring checkbox is checked then user must need to fill Frequency field</description>
    <errorConditionFormula>AND(Recurring__c = TRUE,ISPICKVAL(Frequency__c, &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>Fill Frequency field</errorMessage>
</ValidationRule>