force-app/main/default/objects/Event__c/validationRules/Recurring_Checkbox_Not_Checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Checkbox_Not_Checked</fullName>
    <active>true</active>
    <description>If checkbox is unchecked then User can not select Frequency field</description>
    <errorConditionFormula>AND(Recurring__c = FALSE,NOT(ISPICKVAL(Frequency__c, &quot;&quot;)))</errorConditionFormula>
    <errorDisplayField>Recurring__c</errorDisplayField>
    <errorMessage>Reccuring field is not checked</errorMessage>
</ValidationRule>